Admin .htaccess: Apache 2.4 requires lowercase 'user' in Require

--- a/admin/.htaccess
+++ b/admin/.htaccess
@@ -2,5 +2,5 @@ AuthType Digest
 AuthName "IETF"
 AuthUserFile /var/local/loginmgr/digest
 AuthDigestDomain http://merlot.tools.ietf.org/
-Require User pasi.eronen@nokia.com henrik@levkowetz.com pe@iki.fi
+Require user pasi.eronen@nokia.com henrik@levkowetz.com pe@iki.fi
 RedirectMatch /dailydose/admin/$ http://merlot.tools.ietf.org/dailydose/admin/articles.pyht
