Use https when proxying local development to tools.ietf.org

--- a/docker/000-default.conf
+++ b/docker/000-default.conf
@@ -24,8 +24,9 @@
 	# we don't want gzipped content inside e.g. <!--#include virtual="/css/wg-page.css" -->
 	RequestHeader unset Accept-Encoding
 
-	ProxyPass /css http://tools.ietf.org/css
-	ProxyPass /inc http://tools.ietf.org/inc
-	ProxyPass /images http://tools.ietf.org/images
-	ProxyPass /tools http://tools.ietf.org/tools
+	SSLProxyEngine on
+	ProxyPass /css https://tools.ietf.org/css
+	ProxyPass /inc https://tools.ietf.org/inc
+	ProxyPass /images https://tools.ietf.org/images
+	ProxyPass /tools https://tools.ietf.org/tools
 </VirtualHost>
